# set_initialpose

./: CMakeLists.txt  README.md  package.xml
cfg/: pose.yaml
launch/: set_initialpose.launch
src/: .set_initialpose_node.cpp.swp  set_initialpose_node.cpp
