<?xml version="1.0"?>
<package format="2">
  <name>set_initialpose</name>
  <version>3.0.1</version>
  <description>The set_initialpose Package </description>

  <maintainer email="florenz.graf@ipa.fraunhofer.de">Florenz Graf</maintainer>
  <author>Florenz Graf</author>

  <license>Fraunhofer IPA</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

</package>
